--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    	<script language="JavaScript1.1">
  	<!--
 		var image1=new Image()
- 		image1.src="images/autumnsheep.jpg"
+ 		image1.src="images/followleader.jpg"
  		var image2=new Image()
  		image2.src="images/sheepline.jpg"
  		var image3=new Image()
